# investor_paradise

./: .cspell.json  .dockerignore  .env.example  .gitignore  .pylintrc  CLI_USAGE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  Makefile  README.md  Writeup.md  cache_manager.py  cli-logo.ini  cli.py  cli_helpers.py  cspell.json  custom_session_service.py  deployment_metadata.json  download_nse_data.py  fix_prompt.py  gemini_agent.py  main.py  pdf_ingest.py  pyproject.toml  requirements.txt  setup_data.py  spinner.py  starter_pack_README.md  starter_pack_pyproject.toml  test_search_query.py
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml
archive/: agentic.py  indices_utils.py  main.py  prompts.py  tools.py
conversations/: CONVERSATION_LOGGING.md  CONVERSATION_LOGGING_QUICKSTART.md  TEST_CONVERSATION_LOGGING.md  __init__.py  conversation_history.jsonl  conversation_logger.py  export_adk_sessions.py  view_conversations.py
deployment/terraform/: build_triggers.tf  variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
docs/performance/: OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_RESULTS.md  test_compact_optimization.py
evaluations/: README.md  integration.evalset.json  session_input.json  test_config.json  user_sim_config.json  user_simulation.json
investor_agent/: .glcoudignore  __init__.py  agent.py  agent_engine_app.py  api_key_manager.py  cache_manager.py  data_engine.py  logger.py  prompts.py  schemas.py  sector_mapping.csv  sub_agents.py  tools.py  utils.py
investor_agent/app_utils/: .requirements.txt  deploy.py  telemetry.py  typing.py
investor_agent/data/cache/: nse_indices_cache.parquet  nse_sector_cache.parquet
investor_agent/prompts/: __init__.py  entry_router_prompt.py  market_agent_prompt.py  merger_prompt.py  pdf_news_prompt.py  web_news_prompt.py
investor_agent/tools/: __init__.py  advanced_analysis_tools.py  core_analysis_tools.py  indices_tools.py  semantic_search_tools.py
investor_research/: agent.py
news_agent/: gemini_agent.py  test_search_query.py
prompts/: prompt-0.txt
tests/integration/: test_agent.py  test_agent_engine_app.py
