[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investor-paradise-cli"
version = "0.1.1"
description = "AI-powered NSE stock analysis agent with interactive CLI and web interface"
readme = "README.md"
requires-python = "==3.11.14"
license = "MIT"
authors = [
    {name = "Divyadarshee Das", email = "divyadarsheedas@gmail.com"},
    {name = "Atul Kumar", email = "atul.kr.369@gmail.com"}
]
keywords = ["stocks", "nse", "analysis", "ai", "gemini", "trading", "investment"]
dependencies = [
    "google-adk[eval] @ git+https://github.com/google/adk-python/",
    "google-cloud-storage",
    "google-genai",
    "pandas",
    "python-dotenv",
    "fastparquet",
    "certifi",
    "rich>=14.2.0",
    "aiosqlite>=0.21.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.6.1",
    "PyPDF2>=3.0.1",
    "python-dateutil>=2.8.2",
    "httpx",
    "keyring>=24.0.0",
]


[project.scripts]
investor-paradise-cli = "cli:cli_main"

[project.urls]
Homepage = "https://github.com/atulkumar2/investor_paradise"
Repository = "https://github.com/atulkumar2/investor_paradise"
Issues = "https://github.com/atulkumar2/investor_paradise/issues"

[tool.setuptools]
packages = ["investor_agent", "investor_agent.prompts", "investor_agent.tools"]
py-modules = ["cli", "cli_helpers", "spinner", "download_nse_data"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["W291", "W293"]  # W291: trailing whitespace, W293: blank line contains whitespace

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.uv.sources]
google-adk = { git = "https://github.com/google/adk-python" }
